kubernetes/3tier-app/k8s-manifests/database.yaml
# DB 배포 (StatefulSet)
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mysql
spec:
    selector:
        matchLabels:
            app: mysql
    serviceName: mysql
    replicas: 1
    template:
        metadata:
            labels:
                app: mysql
        spec:
            containers:
                - name: mysql
                  image: kc-sfacspace.kr-central-2.kcr.dev/kjh-repo/kjh-3tier-database:latest
                  ports:
                      - containerPort: 3306
                        name: mysql
                  volumeMounts:
                      - name: mysql-data
                        mountPath: /var/lib/mysql
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "100m"
                      limits:
                          memory: "512Mi"
                          cpu: "500m"
                  readinessProbe:
                      exec:
                          command:
                              [
                                  "mysqladmin",
                                  "ping",
                                  "-u",
                                  "root",
                                  "-p${MYSQL_ROOT_PASSWORD}",
                              ]
                      initialDelaySeconds: 10
                      periodSeconds: 10
                      timeoutSeconds: 5
            imagePullSecrets:
                - name: kjh-repo
    volumeClaimTemplates:
        - metadata:
              name: mysql-data
          spec:
              accessModes: ["ReadWriteOnce"]
              storageClassName: "csi-cinder-sc-delete" # Explicitly specify the storage class
              resources:
                  requests:
                      storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
    name: mysql
spec:
    selector:
        app: mysql
    ports:
        - port: 3306
          targetPort: 3306
    clusterIP: None # Headless Service
