kubernetes/3tier-app/k8s-manifests/frontend.yaml
# 9. 프론트엔드 Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: kc-sfacspace.kr-central-2.kcr.dev/kjh-repo/kjh-3tier-frontend:latest
                  ports:
                      - containerPort: 80
                  resources:
                      requests:
                          cpu: 100m
                          memory: 128Mi
                      limits:
                          cpu: 300m
                          memory: 256Mi
                  readinessProbe:
                      httpGet:
                          path: /health
                          port: 80
                      initialDelaySeconds: 5
                      periodSeconds: 10
                  livenessProbe:
                      httpGet:
                          path: /health
                          port: 80
                      initialDelaySeconds: 15
                      periodSeconds: 20
            imagePullSecrets:
                - name: kjh-repo
# 10. 프론트엔드 Service
---
apiVersion: v1
kind: Service
metadata:
    name: frontend
    annotations:
        service.beta.kubernetes.io/openstack-internal-load-balancer: "true"
        loadbalancer.ke.kakaocloud.com/load-balancer-type: "ALB"
spec:
    selector:
        app: frontend
    ports:
        - name: http
          port: 80
          targetPort: 80
    type: LoadBalancer
---
# 11. 프론트엔드 HPA
